// Copyright 2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.validate.conformance.harness;

import "buf/validate/conformance/harness/harness.proto";

message ResultSet {
  int32 successes = 1;
  int32 failures = 2;
  repeated SuiteResults suites = 3;

  string suite_filter = 4;
  string case_filter = 5;
  bool verbose = 6;
  bool strict = 7;
}

message SuiteResults {
  string name = 1;
  int32 successes = 2;
  int32 failures = 3;
  repeated CaseResult cases = 4;
}

message CaseResult {
  string name = 1;
  bool success = 2;
  TestResult wanted = 3;
  TestResult got = 4;
}
